GNOME Bugzilla – Bug 699500
gbitlock: fix this to not unconditionally use futex emulation
Last modified: 2013-05-04 14:10:09 UTC
Ryan accidentally committed some debugging code a long time ago, causing this file to always use futex emulation even when real futex support was available. I noticed this a while later and pointed it out to him, and assumed he was going to fix it, but I guess he assumed I was going to fix it, and then neither of us did...
Created attachment 243084 [details] [review] gbitlock: fix this to not unconditionally use futex emulation
Review of attachment 243084 [details] [review]: Ugh. Yes
Attachment 243084 [details] pushed as 13958ee - gbitlock: fix this to not unconditionally use futex emulation